--- a/frontend/interview-prep-ai/package.json
+++ b/frontend/interview-prep-ai/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.10",
+    "@vapi-ai/web": "^2.5.1",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.18.1",
     "moment": "^2.30.1",
     "react": "^19.1.0",
@@ -23,7 +32,9 @@
     "react-router-dom": "^7.6.2",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
-    "tailwindcss": "^4.1.10"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.10",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
